<resources>
    <string name="app_name">Egypt Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Egypt </string>
    <string name="cairo">Cairo</string>
    <string name="alexandria">Alexandria</string>
    <string name="about">About</string>
    <string name="giza">Giza</string>
    <string name="aswan">Aswan</string>
    <string name="luxor">Luxor</string>
    <string name="metro">Metro</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="egypt">Egypt</string>
    <string name="transportation">Transportation</string>
    <string name="train">Train</string>
    <string name="image_slides">Image Slides</string>
    <string name="alexandria_lighthouse">Alexandria Lighthouse</string>
    <string name="qitbay_castle">Qitbay Castle</string>
    <string name="alexandria_library">Alexandria Library</string>
    <string name="cairo_tower">Cairo Tower</string>
    <string name="opera">Opera</string>
    <string name="mohammed_ali_mosque">Mohammed Ali Mosque</string>
    <string name="giza_zoo">Giza Zoo</string>
    <string name="grand_musium">Grand Musium</string>
    <string name="pyramids">Pyramids</string>
    <string name="hatshbsot">Hatshbsot</string>
    <string name="el_karnak">EL Karnak</string>
    <string name="valley_of_kings">Valley Of Kings</string>
    <string name="valley_of_queens">Valley Of Queens</string>
    <string name="images">Images</string>
    <string name="title_activity_test">Test</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="metro_map">Metro Map</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="tab_text_1">About</string>
    <string name="tab_text_2">Videos</string>
    <string name="tab_text_3">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


