<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/giza1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_margin="@dimen/border_margin"
                android:contentDescription="@string/pyramids"
                android:scaleType="fitXY"
                android:src="@drawable/pyramids"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/giza2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_marginLeft="@dimen/border_margin"
                android:layout_marginRight="@dimen/border_margin"
                android:contentDescription="@string/grand_musium"
                android:scaleType="fitXY"
                android:src="@drawable/grand_musium7"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/giza3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_margin="@dimen/border_margin"
                android:contentDescription="@string/giza_zoo"
                android:scaleType="fitXY"
                android:src="@drawable/giza_zoo"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>