<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_margin="@dimen/border_margin"
                android:contentDescription="@string/alexandria_library"
                android:scaleType="fitXY"
                android:src="@drawable/alexandria_library1"
                android:tooltipText="@string/alexandria_library"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_marginLeft="@dimen/border_margin"
                android:layout_marginRight="@dimen/border_margin"
                android:contentDescription="@string/qitbay_castle"
                android:scaleType="fitXY"

                android:src="@drawable/qitbay_castle7"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_margin="@dimen/border_margin"
                android:contentDescription="@string/alexandria_lighthouse"
                android:scaleType="fitXY"
                android:src="@drawable/alexandria_lighthouse1"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>